--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "extra-cmake-modules"]
 	path = extra-cmake-modules
-	url = git://anongit.kde.org/extra-cmake-modules.git
+	url = https://github.com/sailfishos-mirror/extra-cmake-modules.git
